JSSimplificadoParser.py
# Generated from JSSimplificado.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class JSSimplificadoParser ( Parser ):

    grammarFileName = "JSSimplificado.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'int'", "'real'", "'str'", "'bool'",
                     "'let'", "'const'", "'function'", "'return'", "'if'",
                     "'else'", "'while'", "'for'", "'break'", "'class'",
                     "'new'", "'this'", "'constructor'", "'void'", "'null'",
                     "'console'", "'log'", "'input'", "<INVALID>", "<INVALID>",
                     "<INVALID>", "<INVALID>", "'++'", "'--'", "'**'", "'+='",
                     "'-='", "'*='", "'/='", "'%='", "'=='", "'!='", "'>='",
                     "'<='", "'&&'", "'||'", "'>'", "'<'", "'!'", "'+'",
                     "'-'", "'*'", "'/'", "'%'", "'='", "';'", "','", "'.'",
                     "'('", "')'", "'{'", "'}'", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "INT_TYPE", "REAL_TYPE", "STR_TYPE",
                      "BOOL_TYPE", "LET", "CONST", "FUNCTION", "RETURN",
                      "IF", "ELSE", "WHILE", "FOR", "BREAK", "CLASS", "NEW",
                      "THIS", "CONSTRUCTOR", "VOID", "NULL", "CONSOLE",
                      "LOG", "INPUT", "BOOL_LIT", "REAL_LIT", "INT_LIT",
                      "STR_LIT", "INC", "DEC", "POW", "MAIS_IG", "MENOS_IG",
                      "MULT_IG", "DIV_IG", "MOD_IG", "EQ", "NEQ", "GTE",
                      "LTE", "AND", "OR", "GT", "LT", "NOT", "PLUS", "MINUS",
                      "MULT", "DIV", "MOD", "ASSIGN", "SEMI", "COMMA", "DOT",
                      "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK",
                      "RBRACK", "ID", "LINE_COMMENT", "WS" ]

    RULE_prog = 0
    RULE_decl = 1
    RULE_varDecl = 2
    RULE_funcDecl = 3
    RULE_tipoRetorno = 4
    RULE_paramList = 5
    RULE_param = 6
    RULE_dimensoes = 7
    RULE_dimensoesVazias = 8
    RULE_inicializadorVetor = 9
    RULE_elementoVetor = 10
    RULE_classDecl = 11
    RULE_atributo = 12
    RULE_constructorDecl = 13
    RULE_stmtConstructor = 14
    RULE_metodoDecl = 15
    RULE_bloco = 16
    RULE_stmt = 17
    RULE_atribComp = 18
    RULE_forInit = 19
    RULE_forUpdate = 20
    RULE_indices = 21
    RULE_chamadaFuncao = 22
    RULE_casting = 23
    RULE_consolelog = 24
    RULE_inputStmt = 25
    RULE_idList = 26
    RULE_exprList = 27
    RULE_expr = 28
    RULE_tipo = 29

    ruleNames =  [ "prog", "decl", "varDecl", "funcDecl", "tipoRetorno",
                   "paramList", "param", "dimensoes", "dimensoesVazias",
                   "inicializadorVetor", "elementoVetor", "classDecl", "atributo",
                   "constructorDecl", "stmtConstructor", "metodoDecl", "bloco",
                   "stmt", "atribComp", "forInit", "forUpdate", "indices",
                   "chamadaFuncao", "casting", "consolelog", "inputStmt",
                   "idList", "exprList", "expr", "tipo" ]

    EOF = Token.EOF
    INT_TYPE=1
    REAL_TYPE=2
    STR_TYPE=3
    BOOL_TYPE=4
    LET=5
    CONST=6
    FUNCTION=7
    RETURN=8
    IF=9
    ELSE=10
    WHILE=11
    FOR=12
    BREAK=13
    CLASS=14
    NEW=15
    THIS=16
    CONSTRUCTOR=17
    VOID=18
    NULL=19
    CONSOLE=20
    LOG=21
    INPUT=22
    BOOL_LIT=23
    REAL_LIT=24
    INT_LIT=25
    STR_LIT=26
    INC=27
    DEC=28
    POW=29
    MAIS_IG=30
    MENOS_IG=31
    MULT_IG=32
    DIV_IG=33
    MOD_IG=34
    EQ=35
    NEQ=36
    GTE=37
    LTE=38
    AND=39
    OR=40
    GT=41
    LT=42
    NOT=43
    PLUS=44
    MINUS=45
    MULT=46
    DIV=47
    MOD=48
    ASSIGN=49
    SEMI=50
    COMMA=51
    DOT=52
    LPAREN=53
    RPAREN=54
    LBRACE=55
    RBRACE=56
    LBRACK=57
    RBRACK=58
    ID=59
    LINE_COMMENT=60
    WS=61

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(JSSimplificadoParser.EOF, 0)

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JSSimplificadoParser.DeclContext)
            else:
                return self.getTypedRuleContext(JSSimplificadoParser.DeclContext,i)


        def getRuleIndex(self):
            return JSSimplificadoParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = JSSimplificadoParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 16608) != 0):
                self.state = 60
                self.decl()
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 66
            self.match(JSSimplificadoParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(JSSimplificadoParser.VarDeclContext,0)


        def funcDecl(self):
            return self.getTypedRuleContext(JSSimplificadoParser.FuncDeclContext,0)


        def classDecl(self):
            return self.getTypedRuleContext(JSSimplificadoParser.ClassDeclContext,0)


        def getRuleIndex(self):
            return JSSimplificadoParser.RULE_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl" ):
                listener.enterDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl" ):
                listener.exitDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = JSSimplificadoParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        try:
            self.state = 71
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5, 6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 68
                self.varDecl()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 69
                self.funcDecl()
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 3)
                self.state = 70
                self.classDecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return JSSimplificadoParser.RULE_varDecl


        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class VarVetorContext(VarDeclContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JSSimplificadoParser.VarDeclContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def tipo(self):
            return self.getTypedRuleContext(JSSimplificadoParser.TipoContext,0)

        def dimensoes(self):
            return self.getTypedRuleContext(JSSimplificadoParser.DimensoesContext,0)

        def ID(self):
            return self.getToken(JSSimplificadoParser.ID, 0)
        def SEMI(self):
            return self.getToken(JSSimplificadoParser.SEMI, 0)
        def LET(self):
            return self.getToken(JSSimplificadoParser.LET, 0)
        def CONST(self):
            return self.getToken(JSSimplificadoParser.CONST, 0)
        def ASSIGN(self):
            return self.getToken(JSSimplificadoParser.ASSIGN, 0)
        def inicializadorVetor(self):
            return self.getTypedRuleContext(JSSimplificadoParser.InicializadorVetorContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarVetor" ):
                listener.enterVarVetor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarVetor" ):
                listener.exitVarVetor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarVetor" ):
                return visitor.visitVarVetor(self)
            else:
                return visitor.visitChildren(self)


    class VarObjetoContext(VarDeclContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JSSimplificadoParser.VarDeclContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(JSSimplificadoParser.ID)
            else:
                return self.getToken(JSSimplificadoParser.ID, i)
        def SEMI(self):
            return self.getToken(JSSimplificadoParser.SEMI, 0)
        def LET(self):
            return self.getToken(JSSimplificadoParser.LET, 0)
        def CONST(self):
            return self.getToken(JSSimplificadoParser.CONST, 0)
        def ASSIGN(self):
            return self.getToken(JSSimplificadoParser.ASSIGN, 0)
        def expr(self):
            return self.getTypedRuleContext(JSSimplificadoParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarObjeto" ):
                listener.enterVarObjeto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarObjeto" ):
                listener.exitVarObjeto(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarObjeto" ):
                return visitor.visitVarObjeto(self)
            else:
                return visitor.visitChildren(self)


    class VarSimplesContext(VarDeclContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JSSimplificadoParser.VarDeclContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def tipo(self):
            return self.getTypedRuleContext(JSSimplificadoParser.TipoContext,0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(JSSimplificadoParser.ID)
            else:
                return self.getToken(JSSimplificadoParser.ID, i)
        def SEMI(self):
            return self.getToken(JSSimplificadoParser.SEMI, 0)
        def LET(self):
            return self.getToken(JSSimplificadoParser.LET, 0)
        def CONST(self):
            return self.getToken(JSSimplificadoParser.CONST, 0)
        def ASSIGN(self):
            return self.getToken(JSSimplificadoParser.ASSIGN, 0)
        def expr(self):
            return self.getTypedRuleContext(JSSimplificadoParser.ExprContext,0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(JSSimplificadoParser.COMMA)
            else:
                return self.getToken(JSSimplificadoParser.COMMA, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarSimples" ):
                listener.enterVarSimples(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarSimples" ):
                listener.exitVarSimples(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarSimples" ):
                return visitor.visitVarSimples(self)
            else:
                return visitor.visitChildren(self)



    def varDecl(self):

        localctx = JSSimplificadoParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varDecl)
        self._la = 0 # Token type
        try:
            self.state = 107
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                localctx = JSSimplificadoParser.VarSimplesContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 73
                _la = self._input.LA(1)
                if not(_la==5 or _la==6):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 74
                self.tipo()
                self.state = 75
                self.match(JSSimplificadoParser.ID)
                self.state = 85
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [49]:
                    self.state = 76
                    self.match(JSSimplificadoParser.ASSIGN)
                    self.state = 77
                    self.expr(0)
                    pass
                elif token in [50, 51]:
                    self.state = 82
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==51:
                        self.state = 78
                        self.match(JSSimplificadoParser.COMMA)
                        self.state = 79
                        self.match(JSSimplificadoParser.ID)
                        self.state = 84
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 87
                self.match(JSSimplificadoParser.SEMI)
                pass

            elif la_ == 2:
                localctx = JSSimplificadoParser.VarVetorContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 89
                _la = self._input.LA(1)
                if not(_la==5 or _la==6):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 90
                self.tipo()
                self.state = 91
                self.dimensoes()
                self.state = 92
                self.match(JSSimplificadoParser.ID)
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==49:
                    self.state = 93
                    self.match(JSSimplificadoParser.ASSIGN)
                    self.state = 94
                    self.inicializadorVetor()


                self.state = 97
                self.match(JSSimplificadoParser.SEMI)
                pass

            elif la_ == 3:
                localctx = JSSimplificadoParser.VarObjetoContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 99
                _la = self._input.LA(1)
                if not(_la==5 or _la==6):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 100
                self.match(JSSimplificadoParser.ID)
                self.state = 101
                self.match(JSSimplificadoParser.ID)
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==49:
                    self.state = 102
                    self.match(JSSimplificadoParser.ASSIGN)
                    self.state = 103
                    self.expr(0)


                self.state = 106
                self.match(JSSimplificadoParser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(JSSimplificadoParser.FUNCTION, 0)

        def tipoRetorno(self):
            return self.getTypedRuleContext(JSSimplificadoParser.TipoRetornoContext,0)


        def ID(self):
            return self.getToken(JSSimplificadoParser.ID, 0)

        def LPAREN(self):
            return self.getToken(JSSimplificadoParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(JSSimplificadoParser.RPAREN, 0)

        def bloco(self):
            return self.getTypedRuleContext(JSSimplificadoParser.BlocoContext,0)


        def paramList(self):
            return self.getTypedRuleContext(JSSimplificadoParser.ParamListContext,0)


        def getRuleIndex(self):
            return JSSimplificadoParser.RULE_funcDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncDecl" ):
                listener.enterFuncDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncDecl" ):
                listener.exitFuncDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDecl" ):
                return visitor.visitFuncDecl(self)
            else:
                return visitor.visitChildren(self)




    def funcDecl(self):

        localctx = JSSimplificadoParser.FuncDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_funcDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(JSSimplificadoParser.FUNCTION)
            self.state = 110
            self.tipoRetorno()
            self.state = 111
            self.match(JSSimplificadoParser.ID)
            self.state = 112
            self.match(JSSimplificadoParser.LPAREN)
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 576460752303423518) != 0):
                self.state = 113
                self.paramList()


            self.state = 116
            self.match(JSSimplificadoParser.RPAREN)
            self.state = 117
            self.bloco()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoRetornoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(JSSimplificadoParser.TipoContext,0)


        def ID(self):
            return self.getToken(JSSimplificadoParser.ID, 0)

        def VOID(self):
            return self.getToken(JSSimplificadoParser.VOID, 0)

        def getRuleIndex(self):
            return JSSimplificadoParser.RULE_tipoRetorno

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipoRetorno" ):
                listener.enterTipoRetorno(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipoRetorno" ):
                listener.exitTipoRetorno(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipoRetorno" ):
                return visitor.visitTipoRetorno(self)
            else:
                return visitor.visitChildren(self)




    def tipoRetorno(self):

        localctx = JSSimplificadoParser.TipoRetornoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_tipoRetorno)
        try:
            self.state = 122
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 2, 3, 4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 119
                self.tipo()
                pass
            elif token in [59]:
                self.enterOuterAlt(localctx, 2)
                self.state = 120
                self.match(JSSimplificadoParser.ID)
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 3)
                self.state = 121
                self.match(JSSimplificadoParser.VOID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JSSimplificadoParser.ParamContext)
            else:
                return self.getTypedRuleContext(JSSimplificadoParser.ParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(JSSimplificadoParser.COMMA)
            else:
                return self.getToken(JSSimplificadoParser.COMMA, i)

        def getRuleIndex(self):
            return JSSimplificadoParser.RULE_paramList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamList" ):
                listener.enterParamList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamList" ):
                listener.exitParamList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):

        localctx = JSSimplificadoParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.param()
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==51:
                self.state = 125
                self.match(JSSimplificadoParser.COMMA)
                self.state = 126
                self.param()
                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(JSSimplificadoParser.TipoContext,0)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(JSSimplificadoParser.ID)
            else:
                return self.getToken(JSSimplificadoParser.ID, i)

        def dimensoesVazias(self):
            return self.getTypedRuleContext(JSSimplificadoParser.DimensoesVaziasContext,0)


        def getRuleIndex(self):
            return JSSimplificadoParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = JSSimplificadoParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_param)
        try:
            self.state = 141
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 132
                self.tipo()
                self.state = 133
                self.match(JSSimplificadoParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 135
                self.tipo()
                self.state = 136
                self.dimensoesVazias()
                self.state = 137
                self.match(JSSimplificadoParser.ID)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 139
                self.match(JSSimplificadoParser.ID)
                self.state = 140
                self.match(JSSimplificadoParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimensoesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACK(self, i:int=None):
            if i is None:
                return self.getTokens(JSSimplificadoParser.LBRACK)
            else:
                return self.getToken(JSSimplificadoParser.LBRACK, i)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JSSimplificadoParser.ExprContext)
            else:
                return self.getTypedRuleContext(JSSimplificadoParser.ExprContext,i)


        def RBRACK(self, i:int=None):
            if i is None:
                return self.getTokens(JSSimplificadoParser.RBRACK)
            else:
                return self.getToken(JSSimplificadoParser.RBRACK, i)
